<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/contentDiglog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@mipmap/children"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="@dimen/result_image_size"
                android:layout_height="@dimen/result_image_size"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/children" />

            <TextView
                android:id="@+id/diglogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_sm"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/resultdialogTitle"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/scopeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/mediumorchid"
                android:textSize="20dp"
                tools:text="得分：100分" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:src="@drawable/ic_share_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/spacer_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="left"
                android:paddingStart="@dimen/lg_padding"
                android:textColor="@color/purple"
                android:textSize="@dimen/font_size_sm"
                tools:text="题型: 个位数加减法" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spacer_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subject_num_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:paddingLeft="@dimen/lg_margin"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dialogTimer"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/subject_num_result" />

            <Chronometer
                android:id="@+id/dialogTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/spacer_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:text="题目"
                android:textColor="@color/purple"
                android:textSize="@dimen/font_size_sm" />

            <TextView
                android:id="@+id/error_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="你的答案"
                android:textColor="@color/purple"
                android:textSize="@dimen/font_size_sm" />

            <TextView
                android:id="@+id/correct_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="答案"
                android:textColor="@color/purple"
                android:textSize="@dimen/font_size_sm"
                tools:text="答案" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/question_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/result_dialog_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/normal_padding">

            <Button
                android:id="@+id/dialogBtnTrue"
                style="@style/pink_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </LinearLayout>
</layout>